--- a/src/pages/appointment/appointment.scss
+++ b/src/pages/appointment/appointment.scss
@@ -1,3 +1,28 @@
 page-appointment {
 
+    .text-area {
+        
+        padding-left: 0;
+        font-size: 1.4rem;
+        color: #666;
+
+        .text-input-md {
+            margin-left: 0px;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        
+    }
+
+    .item-md {
+        padding-left: 0px; 
+    }
+
+    .item-md ion-icon[item-left] + .item-inner,
+    .item-md ion-icon[item-left] + .item-input,
+    .item-md ion-icon[item-start] + .item-inner,
+    .item-md ion-icon[item-start] + .item-input{
+        margin-left: 12px;
+    }
+
 }
