--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,13 +23,36 @@ $font-path: "../assets/fonts";
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #8BC34A,
+  secondary:  #448AFF,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #DCEDC8,
+  dark:       #689F38,
+
+  card-list-background: #F0f0f0,
+
+  busy:       #f53d3d,
+  medium:     #FFC107,
+  quiet:      #8BC34A,
+  out:        gray,
+
 );
+
+/*
+$colors: (
+  primary:    #E91E63,
+  secondary:  #FF5252,
+  danger:     #f53d3d,
+  light:      #F8BBD0,
+  dark:       #C2185B
+);
+*/
+
+
+
+
 
 
 // App iOS Variables
@@ -47,8 +70,9 @@ $colors: (
 $toolbar-md-background:                   color($colors, primary);
 
 // Change the color of the segment button text
-$toolbar-md-active-color:                 #fff;
+$toolbar-md-active-color:                 #689F38;
 
+//$badge-font-size: 1rem;
 
 // App Windows Variables
 // --------------------------------------------------
