--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,6 +12,10 @@
                     <ion-icon item-start [name]="p.icon"></ion-icon>
                      {{p.title}}
                 </button>
+                <button ion-item menuClose (click)="exit()">
+                    <ion-icon item-start name="exit"></ion-icon>
+                     Salir
+                </button>
             </ion-list>
         </ion-content>
     </ion-menu>
