--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,36 @@
 page-settings {
 
+    .card-md {
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 100%
+    }
+
+    .scroll-content{
+        background-color: color($colors, card-list-background);
+    }
+
+    hr {
+        margin: 0;
+    }
+
+    .firstCard {
+        margin-top: 0px;
+    }
+
+    .card-header-md {
+        color: color($colors, dark);
+        padding-bottom: 0;
+        font-size: medium;
+    }
+
+    .label-md {
+        margin-top: 4px;
+        margin-bottom: 4px;
+    }
+
+    .item-md p{
+        font-size: small;
+    }
+
 }
