--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -49,14 +49,13 @@
   }
 }
 
-.formErrorMessage {
+.form-error-message {
       margin-top: 0;
       margin-bottom: 0;
-      margin-left: 73px;
       color:    color($colors, danger);
       font-size: small;
   
-  }
+}
 
 /*
 .button-md {
