--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,15 @@
 page-login {
 
+    .form-error-message {
+      margin-left: 53px;
+    }
+
+    .item-md ion-icon[item-left] + .item-inner,
+    .item-md ion-icon[item-left] + .item-input,
+    .item-md ion-icon[item-start] + .item-inner,
+    .item-md ion-icon[item-start] + .item-input {
+        margin-left: 6px;
+    }
 
     .login {
         background:    color($colors, dark);
