--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,3 +1,25 @@
 page-register {
 
+    .form-error-message {
+      margin-left: 38px;
+    }
+
+    .item-md {
+        padding-left: 0px;
+    }
+
+    .item-md ion-icon[item-left] + .item-inner,
+    .item-md ion-icon[item-left] + .item-input,
+    .item-md ion-icon[item-start] + .item-inner,
+    .item-md ion-icon[item-start] + .item-input {
+        margin-left: 6px;
+    }
+
+    .label-md {
+        margin-top: 4px;
+        margin-bottom: 4px;
+    }
+
+
+
 }
